[package]
name = "multiplayer"
version = "0.1.0"
authors = ["Robbie <robert.tulip97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
specs = { version = "0.15.0", features = ["specs-derive"] }